syntax = "proto3";
package lorenzo.btclightclient.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Lorenzo-Protocol/lorenzo/v2/x/btclightclient/types";

// BTCHeaderInfo is a structure that contains all relevant information about a
// BTC header
//  - Full header bytes
//  - Header hash for easy retrieval
//  - Height of the header in the BTC chain
//  - Total work spent on the header. This is the sum of the work corresponding
//  to the header Bits field
//    and the total work of the header.
message BTCHeaderInfo {
  bytes header = 1
      [ (gogoproto.customtype) =
            "github.com/Lorenzo-Protocol/lorenzo/v2/types.BTCHeaderBytes" ];
  bytes hash = 2
      [ (gogoproto.customtype) =
            "github.com/Lorenzo-Protocol/lorenzo/v2/types.BTCHeaderHashBytes" ];
  uint64 height = 3;
  bytes work = 4 [ (gogoproto.customtype) = "cosmossdk.io/math.Uint" ];
}

message BTCFeeRate { uint64 fee_rate = 1; }
